--- a/html/halaman-utama.html
+++ b/html/halaman-utama.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <link rel="icon" href="../asset/image/favicon_game.png" type="image/png" />
-  <link rel="manifest" href="../manifest.json">
+  <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#ffc107" />
 
   <style>
@@ -457,7 +457,7 @@
     }
 
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('../sw.js').then((reg) => {
+      navigator.serviceWorker.register('/sw.js').then((reg) => {
         reg.onupdatefound = () => {
           const newSW = reg.installing;
           newSW.onstatechange = () => {
