Perbaiki loading & redirect logic PWA

--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
     <title>Login | Game Edukasi Perkalian</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
+    <link rel="manifest" href="/manifest.json">
     <link rel="icon" href="/asset/image/favicon_game.png" type="image/png">
 
     <style>
