--- a/html/level-mudah.html
+++ b/html/level-mudah.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <meta name="theme-color" content="#fff8c2" />
+    <link rel="manifest" href="/manifest.json">
     <link rel="icon" href="../asset/image/favicon_game.png" type="image/png">
 
     <style>
