--- a/html/level-sedang.html
+++ b/html/level-sedang.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#fff8c2" />
     
     <link rel="icon" href="../asset/image/favicon_game.png" type="image/png">
