--- a/html/profil.html
+++ b/html/profil.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://unpkg.com/feather-icons"></script>
   <meta name="theme-color" content="#fff8c2" />
+  <link rel="manifest" href="/manifest.json">
   <link rel="icon" href="../asset/image/favicon_game.png" type="image/png" />
 
   <style>
