--- a/html/tentang-perkalian.html
+++ b/html/tentang-perkalian.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <link rel="icon" href="../asset/image/favicon_game.png" type="image/png" />
+  <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#fff8c2" />
 
   <style>
