--- a/html/level-sulit.html
+++ b/html/level-sulit.html
@@ -702,8 +702,8 @@
             }
 
             tampilkanCountdown(() => {
-                newQuestion();   // Setelah countdown selesai, mulai soal baru
-                mulaiTimer();    // Timer dimulai ulang
+                newQuestion();  
+                mulaiTimer();   
             });
 
             bootstrap.Modal.getInstance(document.getElementById("hasilModal"))?.hide();
