--- a/html/halaman-utama.html
+++ b/html/halaman-utama.html
@@ -30,7 +30,8 @@
     .container {
       flex: 1;
       max-width: 800px;
-      margin: auto;
+      margin: 0 auto;
+      /* ganti dari margin: auto; */
     }
 
     .welcome h2 {
@@ -222,6 +223,12 @@
 
     #modalPilihLevel .btn-3d-level .material-icons {
       font-size: 1.35em;
+    }
+
+    @media (max-width: 767.98px) {
+      .navbar-toggler-icon {
+        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='black' stroke-width='2' stroke-linecap='round' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+      }
     }
   </style>
 </head>
