--- a/html/cara-bermain.html
+++ b/html/cara-bermain.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Cara Bermain | Game Edukasi Perkalian</title>
+  <title>Cara Bermain | KaliKu</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-  <link rel="icon" href="/asset/image/favicon_game.png" type="image/png"/>
+  <link rel="icon" href="/asset/image/kaliku.png" type="image/png"/>
   <meta name="theme-color" content="#fff8c2"/>
   <style>
     html, body {
