--- a/html/level-mudah.html
+++ b/html/level-mudah.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Level Mudah - Game Perkalian</title>
+    <title>Level Mudah - KaliKu</title>
 
     <!-- Bootstrap & Google Fonts/Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <meta name="theme-color" content="#fff8c2" />
     <link rel="manifest" href="/manifest.json">
-    <link rel="icon" href="../asset/image/favicon_game.png" type="image/png">
+    <link rel="icon" href="../asset/image/kaliku.png" type="image/png">
 
     <style>
         body {
