--- a/html/level-sedang.html
+++ b/html/level-sedang.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Level Sedang - Game Perkalian</title>
+    <title>Level Sedang - KaliKu</title>
 
     <!-- Bootstrap & Google Fonts/Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -13,7 +13,7 @@
     <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#fff8c2" />
 
-    <link rel="icon" href="../asset/image/favicon_game.png" type="image/png">
+    <link rel="icon" href="../asset/image/kaliku.png" type="image/png">
     <style>
         body {
             background-color: #fff8c2;
