--- a/html/profil.html
+++ b/html/profil.html
@@ -10,7 +10,7 @@
   <script src="https://unpkg.com/feather-icons"></script>
   <meta name="theme-color" content="#fff8c2" />
   <link rel="manifest" href="/manifest.json">
-  <link rel="icon" href="../asset/image/favicon_game.png" type="image/png" />
+  <link rel="icon" href="../asset/image/kaliku.png" type="image/png" />
 
   <style>
     body {
