--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Game Edukasi Perkalian - Loading</title>
+  <title>KaliKu - Loading</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="manifest" href="/manifest.json">
-  <link rel="icon" href="../asset/image/favicon_game.png" type="image/png">
+  <link rel="icon" href="../asset/image/kaliku.png" type="image/png">
 
   <style>
     body {
