--- a/html/halaman-utama.html
+++ b/html/halaman-utama.html
@@ -10,7 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-  <link rel="icon" href="../asset/image/logo_game.png" type="image/png" />
+  <link rel="icon" href="../asset/image/kaliku.png" type="image/png" />
   <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#ffc107" />
 
